Initialize GUI branch